[package]
name = "miarh"
description = "Micro Async Rust Http (Server)"
authors = ["Sergei Minaev <brainsburn@yandex.ru>"]
version = "0.1.0"
edition = "2021"


[[bin]]
name = "miarh"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true

[dependencies]
libc = "0.2"
async-lock = "2.5"
async-io = "1.7"
async-executor = "1.4"
once_cell = "1.12"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
futures-lite = "1.12"
