[package]
name = "miarh"
description = "Micro Async Rust Http (Server)"
authors = ["Sergei Minaev <brainsburn@yandex.ru>"]
version = "0.1.0"
edition = "2021"


[[bin]]
name = "miarh"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true

[dependencies]
libc = "0.2"
async-lock = "2.5"
async-executor = "1.4"
async-net = "1.6"
async-native-tls = "0.4"
native-tls = "0.2"
once_cell = "1.12"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
futures-lite = "1.12"
qpidfile = { version = "0.9.2", git = "https://github.com/SergeiMinaev/qpidfile.rs" }
