[package]
name = "miarh"
description = "Micro Async Rust Http (Server)"
authors = ["Sergei Minaev <i@zenux.ru>"]
version = "0.1.0"
edition = "2021"


[[bin]]
name = "miarh"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
strip = true

[dependencies]
libc = "0.2"
async-lock = "3.3"
async-executor = "1.8"
async-net = "2.0"
async-native-tls = "0.5"
cookie = "0.18"
bincode = "1.3"
brotli = "3.4"
native-tls = "0.2"
once_cell = "1.19"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
futures-lite = "2.2"
qpidfile = { version = "0.9.2", git = "https://github.com/SergeiMinaev/qpidfile.rs" }
memchr = "2.7"
serde_json = "1.0"
miarh-saras-http = { git = "https://github.com/SergeiMinaev/miarh-saras-http" }
